apps/base/deposit-tracker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deposit-tracker
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
