apps/base/deposit-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deposit-tracker
  labels:
    app.kubernetes.io/name: deposit-tracker
spec:
  selector:
    app.kubernetes.io/name: deposit-tracker
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
